feat(ontology): project canonical ledger automatically